# khazad-min

./: .gitignore  Makefile.am  README.md  configure.ac  gcm_64.c  gcm_64.h  khazad-add-block.h  khazad-crypt.c  khazad-decrypt-key-schedule.c  khazad-decrypt.c  khazad-key-schedule.c  khazad-matrix-mul.c  khazad-matrix-mul.h  khazad-min.c  khazad-min.h  khazad-min.pc.in  khazad-mul2.h  khazad-otfks-decrypt.c  khazad-otfks-encrypt.c  khazad-otfks-key.c  khazad-otfks.c  khazad-otfks.h  khazad-print-block.h  khazad-round-funcs.h  khazad-sbox-small.c  khazad-sbox.c  khazad-sbox.h  khazad-test.c  khazad.c  khazad.h
python/: gcm-mul-reduce-table.py  parse-vectors.py
tests/: gcm-test.c  khazad-sbox-test.c  khazad-test-vectors.h  khazad-test.c  khazad-vectors-test.c
